Redirect to the stable documentation

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
     <meta charset="utf8">
-    <meta http-equiv="refresh" content="0; url=https://neet.readthedocs.io/">
-    <link rel="canonical" href="https://neet.readthedocs.io/">
+    <meta http-equiv="refresh" content="0; url=https://neet.readthedocs.io/en/stable/">
+    <link rel="canonical" href="https://neet.readthedocs.io/en/stable/">
     <title>This page has moved</title>
 </head>
 <body>
-    <p>This page has moved. Redirecting you to <a href="https://neet.readthedocs.io/">https://neet.readthedocs.io/</a>&hellip;</p>
+    <p>This page has moved. Redirecting you to <a href="https://neet.readthedocs.io/en/stable/">https://neet.readthedocs.io/en/stable/</a>&hellip;</p>
 </body>
 </html>
